@@ -69,6 +69,8 @@
           (http://www.packetfence.org/mantis/view.php?id=439)
         removed gcc requirement
           (http://www.packetfence.org/mantis/view.php?id=430)
+        re-organize PacketFence binaries
+          (http://www.packetfence.org/mantis/view.php?id=441)
 
 1.7.4
         undef operator in SNMP.pm
